# php-literal-parser

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  rust.yml
benches/: parse.rs
examples/: parse.rs  serde.rs  value.rs
src/: ast.rs  error.rs  lexer.rs  lib.rs  num.rs  parser.rs  serde.rs  serde_impl.rs  string.rs
tests/: tests.rs
