[package]
name = "php-literal-parser"
description = "parser for php literals"
version = "0.5.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/php-literal-parser"
documentation = "https://docs.rs/php-literal-parser"

[dependencies]
logos = "0.12.1"
thiserror = "1.0.37"
memchr = "2.5.0"
serde = "1.0.145"
miette = "5.3.0"
parse-display = "0.6.0"

[dev-dependencies]
maplit = "1.0.2"
serde_derive = "1.0.145"
miette = { version = "5.3.0", features = ["fancy"] }
