[package]
name = "php-literal-parser"
description = "parser for php literals"
version = "0.6.2"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/php-literal-parser"
documentation = "https://docs.rs/php-literal-parser"
rust-version = "1.70.0"

[dependencies]
logos = "0.14.0"
thiserror = "1.0.57"
memchr = "2.7.1"
serde = "1.0.197"
miette = "7.2.0"
parse-display = "0.9.0"

[dev-dependencies]
maplit = "1.0.2"
serde_derive = "1.0.197"
miette = { version = "7.2.0", features = ["fancy"] }
criterion = "0.5.1"
clap = "=4.3.24"

[[bench]]
name = "parse"
harness = false